# xorg-proto-x11proto

./: Makefile.am  Xfuncs.h  Xmd.h  Xos.h  Xosdefs.h  Xthreads.h  configure.ac  meson.build  meson_options.txt
include/X11/: Xfuncproto.h.meson  meson.build
